2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shutdown-manager.cpp: Send ctrl-w to chrome, since WM_DELETE_WINDOW doesn't
	work. Hopefully there are no oob races, since oob apps seems to always be
	installed from firefox.

2010-06-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shutdown-manager.cpp: Don't send neither ctrl-q nor alt-f4, it may mess up
	oob tests due to a race when starting oob apps.

2010-05-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* harness.cpp: GetWindowInfo: Add a hack to get the Window handle.

	* shutdown-manager.cpp: Use the above hack to send a WM_DELETE_WINDOW message
	to oob apps instead of alt+f4/ctrl+q, which goes to the focused window - not
	necessarily where we want it to go.

2010-05-07  Chris Toshok  <toshok@ximian.com>

	* shocker.cpp (ShockerScriptableControlObject::MouseWheel): don't
	cast clicks to an unsigned type, we need to support negative
	values.

	* input.cpp,h (InputProvider::MouseWheel): the clicks parameter
	needs to be signed.
	(InputHelper_MouseWheel): same.

2010-05-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: Implement minor bits of ActivateKeyboardLayout.

2010-05-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* input.cpp: Implement fake mouse wheel input.

2010-05-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: LogError: fix compile error.

2010-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: CompareImages: report the correct result back to js.

2010-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* image-capture.cpp: Master files don't have to be in plural.

2010-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* image-capture.cpp: Fix a few warnings.

2010-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp: Remove debug spew.

2010-04-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* shocker.cpp|h: Use new logging framework, and fail the current test
	instead of aborting when api that hasn't been implemented is called. Rewrite